--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -472,7 +472,7 @@ header.visible {
     background-color: #C5E642;
 }
 
-.video-con iframe {
+.video-con video {
     width: 1000px;
     height: 560px;
     border-radius: 12px;
@@ -724,6 +724,21 @@ footer {
     .hero-content {
         max-width: 70%;
     }
+
+    .product-item {
+        grid-template-columns: repeat(3, 1fr);
+        gap: 10px;
+    }
+
+    .product {
+        width: 120px;
+        height: auto;
+    }
+
+    .image-product {
+        width: 120px;
+        height: 120px;
+    }
 }
 
 @media (max-width: 564px) {
@@ -782,36 +797,6 @@ footer {
         grid-template-columns: repeat(3, 1fr);
     }
 
-}
-
-@media (max-width: 740px) {
-    .product-item {
-        gap: 10px;
-    }
-
-    .product {
-        width: 150px;
-        height: auto;
-    }
-
-    .image-product {
-        width: 150px;
-        height: 150px;
-    }
-
-    .video-con iframe {
-        width: 470px;
-        height: 265px;
-    }
-
-    .detail-video {
-        padding: 10px 10%;
-    }
-
-    .button-link button {
-        width: 80px;
-        height: 80px;
-    }
 }
 
 @media (max-width: 673px) {
