--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -312,7 +312,7 @@ article {
   padding: 0 20px;
 }
 
-.video iframe {
+.video video {
   width: 100%;
   height: 500px;
   border-radius: var(--border-radius);
