--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -907,67 +907,77 @@ footer {
 }
 
 /* slider */
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-.slideshow-container{
-  max-width: 1000px;
-  position: relative;
-  margin: auto;
+
+.slideshow-container {
+    margin-top: 100px;
+    position: relative;
+    z-index: 1000;
 
 }
-.mySlides img{
-  width: 100%;
-  height: 350px;
-  object-fit: cover;
+
+.mySlides img {
+    width: 100%;
+    height: 500px;
+    object-fit: cover;
 }
-.mySlides{
-  display: none;
+
+.mySlides {
+    display: none;
 }
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  margin-top: -22px;
-  padding: 16px;
-  color: bl;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-}
+
+.prev,
 .next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: bl;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
 }
 
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+.prev:hover,
+.next:hover {
+    background-color: rgba(0, 0, 0, 0.8);
 }
 
 .dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
 }
-.active, .dot:hover {
-  background-color: #717171;
+
+.active,
+.dot:hover {
+    background-color: #717171;
 }
+
 .fade {
-  animation-name: fade;
-  animation-duration: 2s;
+    animation-name: fade;
+    animation-duration: 2s;
 }
 
 @keyframes fade {
-  from {opacity: .8}
-  to {opacity: 1}
+    from {
+        opacity: .8
+    }
+
+    to {
+        opacity: 1
+    }
 }
