--- a/assets/css/service.css
+++ b/assets/css/service.css
@@ -234,6 +234,35 @@ header {
     margin-bottom: 50px;
 }
 
+@media (max-width: 1200px) {
+    .gallery-grid {
+        grid-template-columns: repeat(3, minmax(250px, 1fr));
+    }
+}
+
+@media (max-width: 992px) {
+    .gallery-grid {
+        grid-template-columns: repeat(2, minmax(200px, 1fr));
+    }
+}
+
+@media (max-width: 768px) {
+    .gallery-grid {
+        grid-template-columns: 1fr;
+        max-width: 500px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    
+    .gallery-item {
+        margin-bottom: 20px;
+    }
+    
+    .gallery-item img {
+        height: 250px;
+    }
+}
+
 .gallery-item {
     background: white;
     border-radius: 20px;
