--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -69,7 +69,11 @@ header {
   height: 100%;
   object-fit: cover;
   cursor: pointer;
+  transition: all 0.3s ease;
+}
 
+.logo:hover img {
+  transform: scale(1.05);
 }
 
 .nav-container nav {
