--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -781,3 +781,20 @@ footer {
     font-size: 10px;
   }
 }
+
+#loader {
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    background-color: #ffffff;
+    overflow: hidden;
+    top: 0;
+    left: 0;
+}
+
+#progressBar {
+    width: 0%;
+    height: 100%;
+    background-color: #4caf50;
+    transition: width 0.3s;
+}
