--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -1087,3 +1087,20 @@ footer {
 .text-header {
     border: none;
 }
+
+#loader {
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    background-color: #ffffff;
+    overflow: hidden;
+    top: 0;
+    left: 0;
+}
+
+#progressBar {
+    width: 0%;
+    height: 100%;
+    background-color: #4caf50;
+    transition: width 0.3s;
+}
