--- a/assets/css/gallery.css
+++ b/assets/css/gallery.css
@@ -855,3 +855,20 @@ footer {
         font-size: 14px;
     }
 }
+
+#loader {
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    background-color: #ffffff;
+    overflow: hidden;
+    top: 0;
+    left: 0;
+}
+
+#progressBar {
+    width: 0%;
+    height: 100%;
+    background-color: #4caf50;
+    transition: width 0.3s;
+}
